--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
   <section class="section">
     <div class="container is-max-desktop title has-text-centered">
-      <img src="images/swift_logo_color.png" width="50" height="50"/>
+      <img src="images/swift_logo_color.png" width="100" height="100"/>
       <h1>swiftly</h1>
       <p class="subtitle has-text-centered">
         A <a href="https://swift.org">Swift</a> toolchain installer and manager, written in Swift.
@@ -28,9 +28,9 @@
           <div class="left terminal">
             $ curl -L https://swift-server.github.io/swiftly/swiftly-install.sh | bash
           </div>
-          <button class="button is-dark is-small right" id="copy-button" ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard" viewBox="0 0 16 16">
-            <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
-            <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
+          <button class="button is-dark is-small right" id="copy-button" >
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard">
+              <use href="#icon_copy" xlink:href="#icon_copy" role="image" />
             </svg>
           </button>
         </div>
@@ -45,14 +45,25 @@
         Swiftly is a Swift Server Working Group project.
         </p>
         <a href="https://github.com/swift-server/swiftly">
-          <p>
-            <img src="images/github-mark.svg" style="vertical-align: middle; height: 1em" />
-            View on GitHub
+          <p id="gh-link">
+            <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg"><use href="#icon_github" xlink:href="#icon_github" role="image" /></svg>
+            &nbsp;View on GitHub
           </p>
         </a>
       </div>
     </div>
     </section>
+    <svg style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <defs>
+        <symbol id="icon_copy" viewBox="0 0 16 16">
+          <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
+          <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
+        </symbol>
+        <symbol id="icon_github" viewBox="0 0 98 96">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z" fill="#24292f"/>
+        </symbol>
+      </defs>
+    </svg>  
     <script>
       var button = document.getElementById("copy-button");
       button.addEventListener('click', function() {
