Add only available for Linux text

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </svg>
           </button>
         </div>
+        <p class="content is-small">Swiftly is currently only available for Linux.</p>
       </div>
     </div>
   </section>
