--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <br/>
         <div class="box is-family-monospace has-background-dark has-text-light">
           <div class="left terminal">
-            $ curl -L https://swift-server.github.io/swiftly/swiftly-install.sh | bash
+            $ curl -L https://swiftlang.github.io/swiftly/swiftly-install.sh | bash
           </div>
           <button class="button is-dark is-small right" id="copy-button" >
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard">
