Copy proper install command on copy button click
The old URL was used in the install command instead of the new one.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           handle_copy_button_click();
       });
       function handle_copy_button_click() {
-        const swiftly_install_command = "curl -L https://swift-server.github.io/swiftly/swiftly-install.sh | bash";
+        const swiftly_install_command = "curl -L https://swiftlang.github.io/swiftly/swiftly-install.sh | bash";
         navigator.clipboard.writeText(swiftly_install_command);
       }
     </script>
