--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
     <div class="container is-max-desktop">
       <div class="box has-text-centered has-background-light">
         To install swiftly, go to the <a href="https://swift.org/install">Install Page</a> at swift.org.
+
+        WARNING: These are the outdated instructions to install the older swiftly 0.3.0 release.
+        <br/>
+        <br/>
+        <div class="box is-family-monospace has-background-dark has-text-light">
+          <div class="left terminal">
+            $ curl -L https://swiftlang.github.io/swiftly/swiftly-install.sh | bash
+          </div>
+          <button class="button is-dark is-small right" id="copy-button" >
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard">
+              <use href="#icon_copy" xlink:href="#icon_copy" role="image" />
+            </svg>
+          </button>
+        </div>
       </div>
     </div>
   </section>
